objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Advanced_Merchandise__c</fullName>
        <formula>IF( Advanced_Merchandising_Subscription_Fee__c &gt;0, TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advanced Merchandise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advanced_Merchandising_Subscription_Fee__c</fullName>
        <label>Advanced Merchandising Subscription Fee</label>
        <summarizedField>QuoteLineItem.SaaS_Subscription_Fee_Sales_Price__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Name__c</field>
            <operation>contains</operation>
            <value>Advanced Merchandising</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BYOS_Subscription_Fee__c</fullName>
        <label>BYOS Fixed Monthly Subscription Fee</label>
        <summarizedField>QuoteLineItem.SaaS_Subscription_Fee_Sales_Price__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Name__c</field>
            <operation>contains</operation>
            <value>BYOS</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BYOS__c</fullName>
        <formula>IF( BYOS_Subscription_Fee__c &gt;0, TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BYOS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BYO_API_Subscription_Fee__c</fullName>
        <label>BYO-API Fixed Monthly Subscription Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BYO_API__c</fullName>
        <formula>IF(BYO_API_Subscription_Fee__c&gt;0, TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BYO-API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_To_Email__c</fullName>
        <label>Bill To Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Implementation_Fee__c</fullName>
        <label>Build Implementation Fee</label>
        <summarizedField>QuoteLineItem.Implementation_Fee__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Name__c</field>
            <operation>contains</operation>
            <value>Build</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Build_Sites__c</fullName>
        <label>Build Sites</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Build_Subscription_Fee__c</fullName>
        <label>Build Fixed Monthly Subscription Fee</label>
        <summarizedField>QuoteLineItem.SaaS_Subscription_Fee_Sales_Price__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Name__c</field>
            <operation>contains</operation>
            <value>Build</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Build__c</fullName>
        <formula>IF(Build_Subscription_Fee__c&gt;0, TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Build</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>IF(Total_List_Price__c == 0, 0, 1-TotalPrice/Total_List_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discover_Implementation_Fee__c</fullName>
        <description>Roll-up summation of all Discover product family implementation fees</description>
        <label>Discover Implementation Fee</label>
        <summarizedField>QuoteLineItem.Implementation_Fee__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Name__c</field>
            <operation>contains</operation>
            <value>Discover</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discover_Sites__c</fullName>
        <label>Discover Sites</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discover_Subscription_Fee__c</fullName>
        <label>Discover Fixed Monthly Subscription Fee</label>
        <summarizedField>QuoteLineItem.SaaS_Subscription_Fee_Sales_Price__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Name__c</field>
            <operation>contains</operation>
            <value>Discover</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discover__c</fullName>
        <formula>If(Discover_Subscription_Fee__c&gt;0,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_for_Billing__c</fullName>
        <defaultValue>&quot;billing@richrelevance.com&quot;</defaultValue>
        <label>Email for Billing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engage_Implementation_Fee__c</fullName>
        <label>Engage Implementation Fee</label>
        <summarizedField>QuoteLineItem.Implementation_Fee__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Name__c</field>
            <operation>contains</operation>
            <value>Engage</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Engage_Sites__c</fullName>
        <label>Engage Sites</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Engage_Subscription_Fee__c</fullName>
        <label>Engage Fixed Monthly Subscription Fee</label>
        <summarizedField>QuoteLineItem.SaaS_Subscription_Fee_Sales_Price__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Name__c</field>
            <operation>contains</operation>
            <value>Engage</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Engage__c</fullName>
        <formula>IF(Engage_Subscription_Fee__c &gt;0, TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Term__c</fullName>
        <formula>Text(Opportunity.Initial_Contract_Term__c) &amp; &quot; months&quot;</formula>
        <label>Initial Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_1_Standard_Support__c</fullName>
        <formula>AND(!Level_2_Plus_Support__c,! Level_3_Platinum_Support__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 1 Standard Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_2_Plus_Support_Fee__c</fullName>
        <label>Level 2 Plus Monthly Support Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level_2_Plus_Support__c</fullName>
        <formula>if(Level_2_Plus_Support_Fee__c &gt;0,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 2 Plus Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_3_Platinum_Support_Fee__c</fullName>
        <label>Level 3 Platinum Monthly Support Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level_3_Platinum_Support__c</fullName>
        <formula>IF(Level_3_Platinum_Support_Fee__c&gt;0,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 3 Platinum Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opp_Name__c</fullName>
        <formula>Opportunity.Name</formula>
        <label>Opp Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommend_Implementation_Fee__c</fullName>
        <label>Recommend Implementation Fee</label>
        <summarizedField>QuoteLineItem.Implementation_Fee__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Name__c</field>
            <operation>contains</operation>
            <value>Recommend</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recommend_Sites__c</fullName>
        <label>Recommend Sites</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recommend_Subscription_Fee__c</fullName>
        <label>Recommend Fixed Monthly Subscription Fee</label>
        <summarizedField>QuoteLineItem.SaaS_Subscription_Fee_Sales_Price__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Name__c</field>
            <operation>contains</operation>
            <value>Recommend</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recommend__c</fullName>
        <formula>IF(Recommend_Subscription_Fee__c &gt;0, TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recommend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Term__c</fullName>
        <formula>Text(Opportunity.Renewal_Term__c) &amp; &quot; months&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RichRelevance_Name__c</fullName>
        <formula>&quot;RichRelevance&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <displayFormat>RRv20#{YYYYMMDD}-{000}</displayFormat>
        <label>Sales Order</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Show_Cumulative_Discount__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Cumulative Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Cumulative_List_Price__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Cumulative List Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Cumulative_Sales_Price__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Cumulative Sales Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Discount__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Discount(%)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Hours__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_List_Price__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show List Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Sales_Price__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Sales Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Special_Terms__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Special Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Conditions__c</fullName>
        <label>Special Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <label>Total List Price</label>
        <summarizedField>QuoteLineItem.List_Price__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>